# localsend-rs

./: README.md  angular.json  package-lock.json  package.json
src/: index.html  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/core/: device.rs  mod.rs  server.rs  utils.rs
src-tauri/src/models/: mod.rs
src/app/: app.component.html  app.component.ts  app.routes.ts
src/app/modules/receive/: receive.component.html  receive.component.ts
src/app/modules/send/: send.component.css  send.component.html  send.component.ts
src/app/modules/settings/: settings.component.html  settings.component.ts
src/app/modules/side-panel/: side-panel.component.css  side-panel.component.html  side-panel.component.ts
src/app/shared/models/: device.model.ts
src/app/shared/services/: localsend.service.ts
